as a user i can update my hours[#186106465]
